# mbe-api

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: deep-reasoner.md  fast-worker.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
app/: enums.py  main.py
app/core/: config.py  deps.py  security.py
app/db/: migrate.py  session.py
app/models/: __init__.py  commission.py  core.py  customer.py  fiscal.py  front_desk.py  incidence.py  inventory.py  logistics.py  product.py  purchases.py  sales.py  sat_catalog.py  supplier.py  technical_service.py  user.py
app/schemas/: __init__.py  auth.py  core.py  customer.py  fiscal.py  product.py  product_price.py  sat_catalog.py  supplier.py  user.py
app/services/: address_service.py  cash_drawer_service.py  csd_service.py  customer_service.py  employee_service.py  exchange_rate_service.py  expense_service.py  facility_service.py  fk_expansion.py  image_service.py  label_service.py  payment_method_option_service.py  point_sale_service.py  price_list_service.py  product_price_service.py  product_service.py  production_site_service.py  references.py  sat_catalog_service.py  store_service.py  supplier_service.py  taxpayer_certificate_service.py  taxpayer_issuer_service.py  taxpayer_recipient_service.py  user_service.py  vehicle_operator_service.py  (+2 more)
docs/: README.md  constants.md  data-dictionary.md  mbe_schema.sql
migrations/: 004_facility_rename.sql  env.py
(+147 files in other folders)
